# VocalForge

./: .gitignore  LICENSE.md  README.md  audio_demo.ipynb  audio_demo.py  ctc.py  generate_dataset.py  pyproject.toml  readme.md  refineaudio.py  requirements.txt  run_ctc_segmentation.py  test.ipynb  text_demo.ipynb  text_demo.py
VCAuditor/: package-lock.json  package.json
VCAuditor/public/: app.js
VocalForge/: __init__.py
VocalForge/VocalForge/audio/: export_audio.py
VocalForge/VocalForge/text/: create_dataset.py  ctc_utils.py  refine_text.py  segment.py  transcribe.py
VocalForge/audio/: __init__.py  audio_utils.py  export_audio.py  isolate.py  overlap.py  refine_audio.py  voice_detection.py
VocalForge/text/: __init__.py  create_dataset.py  ctc.py  ctc_utils.py  normalize_text.py  process_text.py  segment.py  split_audio.py  text_utils.py  transcribe.py
audio/: __init__.py  audio_utils.py  export_audio.py  isolate.py  overlap.py  refine_audio.py  voice_detection.py
media/: media.md
text/: __init__.py  create_dataset.py  ctc_utils.py  normalize_text.py  process_text.py  segment.py  split_audio.py  text_utils.py  transcribe.py
utils/: ctc.py  process_text.py  run_ctc_segmentation.py  utils.py
vcAuditor/: server.js
vcAuditor/public/: index.html  styles.css
